--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,15 @@
 FROM node:20.18.0-alpine3.20
 EXPOSE 8080
 ENV DB_HOST="mysql"
-RUN mkdir /opt/server
+RUN addgroup -S expense && adduser -S expense -G expense && \
+    mkdir /opt/server && \
+    chown -R expense:expense /opt/server
+#RUN mkdir /opt/server
 WORKDIR /opt/server
 COPY package.json .
 COPY *.js .
 RUN npm install
+USER expense
 CMD ["node","index.js"]
 
 #before best practices implemented 
