--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,21 @@
+FROM node:20 AS builder
+WORKDIR /opt/server
+COPY package.json .
+COPY *.js .
+RUN npm install
+
+
 FROM node:20.18.0-alpine3.20
 EXPOSE 8080
 ENV DB_HOST="mysql"
 RUN addgroup -S expense && adduser -S expense -G expense && \
     mkdir /opt/server && \
     chown -R expense:expense /opt/server
-#RUN mkdir /opt/server
 WORKDIR /opt/server
-COPY package.json .
-COPY *.js .
-RUN npm install
+COPY --from=builder /opt/server /opt/server
 USER expense
-CMD ["node","index.js"]
-
-#before best practices implemented 
+CMD ["node", "index.js"]
+# Before best practices implemented
 # FROM node:20
 # EXPOSE 8080
 # ENV DB_HOST="mysql"
@@ -21,4 +24,4 @@ CMD ["node","index.js"]
 # COPY package.json .
 # COPY *.js .
 # RUN npm install
-# CMD ["node","index.js"]
+# CMD ["node", "index.js"]
